# goincpp

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  bootstrap.sh  do_test.sh  makegoincpp.sh
src/builtin/: builtin.hpp
src/context/: context.cpp  context.hpp
src/errors/: errors.cpp  errors.hpp
src/internal/abi/: type.cpp  type.hpp
src/io/: writer.hpp
src/reflect/: type.hpp
src/runtime/: chan.hpp
src/time/: timer.hpp
test/: CMakeLists.txt  boost_test.cpp  channel_test.cpp  context_test.cpp  errors_test.cpp
